--- a/src/components/CreatePost/CreatePost.css
+++ b/src/components/CreatePost/CreatePost.css
@@ -1,12 +1,24 @@
 .postBox {
-    height: 200px;
-    width: 150px;
-    background-color: white;
-    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+    width: 600px;
+    background-color: #D5D5D7;
+    padding: 15px;
+    margin: 10px;
+}
+
+.inputField {
+    height: 90px;
+    padding: 10px 0px 0px 10px;
 }
 
 .postButton {
-    height: 15px;
-    width: 20px;
-    font-size: 12px;
+    height: 30px;
+    width: 60px;
+    font-size: 14px;
+    background-color: #5063af;
+    color: gainsboro;
+    border-color: transparent;
+    margin: 8px 0px 0px 510px;
 }
