--- a/src/components/CreatePost/CreatePost.css
+++ b/src/components/CreatePost/CreatePost.css
@@ -1,24 +1,25 @@
 .postBox {
     display: flex;
     flex-direction: column;
-    height: 150px;
+    min-height: 160px;
     width: 600px;
     background-color: #D5D5D7;
     padding: 15px;
-    margin: 10px;
+    margin: 10px 0px 50px 10px;
 }
 
 .inputField {
-    height: 90px;
-    padding: 10px 0px 0px 10px;
+    min-height: 90px;
+    padding: 10px 0px 50px 10px;
+    border: 1px solid #3C3C3E;
 }
 
 .postButton {
-    height: 30px;
     width: 60px;
     font-size: 14px;
     background-color: #5063af;
     color: gainsboro;
     border-color: transparent;
     margin: 8px 0px 0px 510px;
+    padding: 5px;
 }
